# fantasy-football-storyline-agent

./: .env.example  .gitignore  AI_WEEKLY_RECAP_README.md  LICENSE  README.md  pyproject.toml  requirements.txt
sleeper_agent/: __init__.py  __main__.py  cli.py  config.py
sleeper_agent/io/: __init__.py  csv_export.py  files.py
sleeper_agent/models/: __init__.py  draft.py  league.py  matchup.py  player.py  roster.py  transaction.py  user.py
sleeper_agent/recap_orchestrator/: __init__.py  audit.py  config.py  llm.py  main.py  pipeline.py  prompts.py  schemas.py  sleeper.py
sleeper_agent/services/: __init__.py  api.py  drafts.py  historical_rosters.py  leagues.py  matchups.py  players.py  week_recap.py
sleeper_agent/tests/: test_cli.py  test_historical_rosters.py  test_matchups.py  test_models.py  test_week_recap.py
